--- a/src/app/core/components/nav/nav.component.scss
+++ b/src/app/core/components/nav/nav.component.scss
@@ -29,7 +29,7 @@
     cursor: pointer;
     @include transition(all 0.3s ease-in);
 
-    @media (orientation: landscape) {
+    @media only screen and (orientation: landscape) {
         top: 8vh;
         right: 5vw;
     }
@@ -97,10 +97,10 @@
     @include transition(all 0.3s ease-in);
 
     #nav {
-        padding: 20vh 10vw 0 10vw;
+        padding: 23vh 10vw 0 10vw;
 
-        @media (orientation: landscape) {
-            padding: 16vh 8vw 14vh 8vw;
+        @media only screen and (orientation: landscape) {
+            padding: 14vh 8vw 14vh 8vw;
         }
     }
 
@@ -143,7 +143,7 @@
                 -webkit-text-stroke: 1px $primary-100-translucent;
             }
 
-            @media (orientation: landscape) {
+            @media only screen and (orientation: landscape) {
                 height: 10vh;
                 line-height: 6rem;
             }
@@ -158,6 +158,10 @@
     visibility: hidden;
     backdrop-filter: blur(50px);
     z-index: 30;
+
+    @media only screen and (orientation: landscape) {
+        display: none;
+    }
 }
 
 #brand-logo {
@@ -171,7 +175,7 @@
     z-index: 50;
     @include transition(all 0.3s ease-in);
 
-    @media (orientation: landscape) {
+    @media only screen and (orientation: landscape) {
         top: 2vh;
         left: 4vw;
     }
@@ -186,7 +190,7 @@
     width: 100%;
     @include transition(all 0.3s ease-in);
 
-    @media (orientation: landscape) {
+    @media only screen and (orientation: landscape) {
         padding: 18vh 4vw 0 4vw;
     }
 }
