--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -57,7 +57,7 @@
             </div>
         </ng-container>
 
-        <!-- TABLET & DESKTOP -->
+        <!-- DESKTOP -->
         <div *appIfScreenSize="[ 'medium', 'large']" id="jobs-md-lg">
             <div id="companies">
                 <span></span>
