--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         <router-outlet></router-outlet>
     </app-nav>
 
-    <!-- TABLET & DESKTOP -->
+    <!-- DESKTOP -->
     <ng-container *appIfScreenSize="[ 'medium', 'large']">
         <!-- HEADER -->
         <app-header></app-header>
