feat(about): update profile picture

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -22,8 +22,8 @@
         <ng-container *appIfScreenSize="[ 'medium', 'large']" >
             <div class="title">About me</div>
 
-            <img src="assets/images/profile-1.jpg" id="profile-picture">
-            <img src="assets/images/profile-3.jpg" id="profile-picture-secondary">
+            <img src="assets/images/profile.jpeg" id="profile-picture">
+            <img src="assets/images/profile-glitched.jpeg" id="profile-picture-secondary">
 
             <p id="about-description" [innerText]="aboutDescription"></p>
         </ng-container>
